hphp/hack/test/typecheck/concurrent/error/concurrent_complex_assign.php.exp
File "concurrent_complex_assign.php", line 7, characters 21-22:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
